--- a/html/registerClass.html
+++ b/html/registerClass.html
@@ -201,7 +201,7 @@
                                     <select class="form-control" id="dropdownTotalHours">
                                         <option selected value="15">15 ชั่วโมง</option>
                                         <option value="20">20 ชั่วโมง</option>
-                                        <option value="30">30 ชั่วโมง</option>
+                                        <option value="30">มากกว่าหรือเท่ากับ 30 ชั่วโมง</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
