--- a/html/recmergedclassdetail.html
+++ b/html/recmergedclassdetail.html
@@ -55,6 +55,10 @@
                                     <label class="col-lg-9 labelnormal" id="lblProgram1">ปกติ</label>
                                 </div>
                                 <div class="form-group">
+                                    <label class="col-lg-3">ประเภทงานสอน :</label>
+                                    <label class="col-lg-9 labelnormal" id="lblSpec1">ไม่ระบุติวเตอร์</label>
+                                </div>
+                                <div class="form-group">
                                     <label class="col-lg-3">ค่าแนะนำงานสอน :</label>
                                     <label class="col-lg-9 labelnormal" id="lblPrice1">2000.00</label>
                                 </div>
@@ -123,6 +127,10 @@
                                 <div class="form-group">
                                     <label class="col-lg-3">ภาษาที่ใช้สอน :</label>
                                     <label class="col-lg-9 labelnormal" id="lblProgram2">ปกติ</label>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-lg-3">ประเภทงานสอน :</label>
+                                    <label class="col-lg-9 labelnormal" id="lblSpec2">ไม่ระบุติวเตอร์</label>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-lg-3">ค่าแนะนำงานสอน :</label>
