--- a/html/classdetail.html
+++ b/html/classdetail.html
@@ -45,10 +45,13 @@
                             <label class="col-lg-9 labelnormal" id="lblClsProgram">ปกติ</label>
                         </div>
                         <div class="form-group">
+                            <label class="col-lg-3">ประเภทงานสอน :</label>
+                            <label class="col-lg-9 labelnormal" id="lblClsSpec">ไม่ระบุติวเตอร์</label>
+                        </div>
+                        <div class="form-group">
                             <label class="col-lg-3">ค่าแนะนำงานสอน :</label>
                             <label class="col-lg-9 labelnormal" id="lblClsPrice">2000.00</label>
                         </div>
-
                         <div class="form-group">
                             <label class="col-lg-3">สถานะ :</label>
                             <label class="col-lg-9 labelnormal" id="lblClsStatus">คณิตศาสตร์</label>
@@ -209,6 +212,13 @@
                 $('#lblClsStuName').text(classDetail.stuName);
                 $('#lblClsStuTel').text(classDetail.stuTel);
                 $('#lblClsStuEmail').text(classDetail.stuEmail);
+                var spec = "";
+                if (classDetail.isSpec == 'Y') {
+                    spec = "ระบุติวเตอร์";
+                } else {
+                    spec = "ไม่ระบุติวเตอร์";
+                }
+                $('#lblClsSpec').text(spec);
                 _timesClassDetail = classDetail.recommendTimelocationList;
                 for (var i = 0; i < _timesClassDetail.length; i++) {
                     appendClassTime(_timesClassDetail[i], i);
