--- a/html/classdetailstudent.html
+++ b/html/classdetailstudent.html
@@ -32,7 +32,7 @@
                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 38px, 0px); top: 0px; left: 0px; will-change: transform;">
 
                     <a class="dropdown-item" href="javascript:toggleModalCancelClsByStudent()">ยกเลิกการลงทะเบียนเรียน</a>
-                    <a class="dropdown-item" href="javascript:toggleModalChangeTutor()">ขอเปลี่ยนติวเตอร์</a>
+                    <a class="dropdown-item" href="javascript:toggleModalChangeTutor()" id="aListRequestChangeTutor">ขอเปลี่ยนติวเตอร์</a>
                 </div>
             </div>
         </div>
@@ -57,7 +57,10 @@
                             <label class="col-lg-3">ภาษาที่ใช้สอน :</label>
                             <label class="col-lg-9 labelnormal" id="lblStuClsProgram">ปกติ</label>
                         </div>
-
+                        <div class="form-group">
+                            <label class="col-lg-3">ประเภทงานสอน :</label>
+                            <label class="col-lg-9 labelnormal" id="lblStuClsSpec">ปกติ</label>
+                        </div>
                         <div class="form-group">
                             <label class="col-lg-3">สถานะ :</label>
                             <label class="col-lg-9 labelnormal" id="lblStuClsStatus">คณิตศาสตร์</label>
@@ -237,9 +240,14 @@
                         <label for="dropdownCancelByStuHours">จำนวนชั่วโมงที่เรียนไปแล้ว</label>
                         <select class="custom-select" id="dropdownCancelByStuHours">
                             <option selected="" value="0">0</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
+                            <option value="1">1 ชั่วโมง</option>
+                            <option value="2">2 ชั่วโมง</option>
+                            <option value="3">3 ชั่วโมง</option>
+                            <option value="4">4 ชั่วโมง</option>
+                            <option value="5">5 ชั่วโมง</option>
+                            <option value="6">6 ชั่วโมง</option>
+                            <option value="7">7 ชั่วโมง</option>
+                            <option value="8">8 ชั่วโมงขึ้นไป</option>
                         </select>
                     </div>
                 </div>
@@ -331,6 +339,13 @@
                 $('#lblStuClsStuName').text(classDetail.stuName);
                 $('#lblStuClsStuTel').text(classDetail.stuTel);
                 $('#lblStuClsStuEmail').text(classDetail.stuEmail);
+                if (classDetail.isSpec == 'Y') {
+                    $('#lblStuClsSpec').text('ระบุติวเตอร์');
+                    $('#aListRequestChangeTutor').hide();
+                } else {
+                    $('#lblStuClsSpec').text('ไม่ระบุติวเตอร์');
+                    $('#aListRequestChangeTutor').show();
+                }
                 if (classDetail.statusId == 1 || classDetail.statusId == 5 || classDetail.statusId == 6) {
                     $('#divNumHours').hide();
                     $('#btnCreateRequest').hide();
@@ -348,7 +363,9 @@
                     $('#btnEvaluateTutor').hide();
                 }
 
-                if (classDetail.statusId != 1 && classDetail.statusId != 5 && classDetail.statusId != 6 && classDetail.turName != null) {
+                if ((classDetail.statusId == 2 || classDetail.statusId == 3 || classDetail.statusId == 4
+                    || classDetail.statusId == 7 || classDetail.statusId == 8 || classDetail.statusId == 9
+                    || (classDetail.statusId == 6 && classDetail.isSpec == 'Y')) && classDetail.turName != null) {
                     $('#lblStuClsTurName').text(classDetail.turName);
                     $('#lblStuClsTurTel').text(classDetail.turTel);
                     $('#lblStuClsTurEmail').text(classDetail.turEmail);
