--- a/html/mainStudent.html
+++ b/html/mainStudent.html
@@ -32,13 +32,18 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a data-toggle="tab" href="#tabCurrentCourse">คอร์สที่จัดหาติวเตอร์ได้แล้ว&nbsp;&nbsp;
+                <a data-toggle="tab" href="#tabPendingConfirm">คอร์สที่รอติวเตอร์รับงานสอน&nbsp;&nbsp;
                     <span class="badge badge-pill badge-danger" id="stubadgenum2"></span>
                 </a>
             </li>
             <li class="nav-item">
-                <a data-toggle="tab" href="#tabStudentOther">อื่นๆ&nbsp;&nbsp;
+                <a data-toggle="tab" href="#tabCurrentCourse">คอร์สที่พร้อมเริ่มเรียน&nbsp;&nbsp;
                     <span class="badge badge-pill badge-danger" id="stubadgenum3"></span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a data-toggle="tab" href="#tabStudentOther">อื่นๆ&nbsp;&nbsp;
+                    <span class="badge badge-pill badge-danger" id="stubadgenum4"></span>
                 </a>
             </li>
         </ul>
@@ -57,9 +62,23 @@
                     </thead>
                 </table>
             </div>
+            <!-- Pending Confirm -->
+            <div class="tab-pane fade" id="tabPendingConfirm">
+                <table id="gridTab2Student" class="table table-condensed table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th data-column-id="clsid" data-width="10%" data-align="center">รหัสงานสอน</th>
+                            <th data-column-id="tutorname" data-width="20%">ชื่อ สกุลติวเตอร์</th>
+                            <th data-column-id="subject" data-width="20%">วิชาและระดับชั้น</th>
+                            <th data-column-id="time" data-width="40%">วัน เวลาและสถานที่เรียน</th>
+                            <th data-column-id="detail" data-width="10%" data-sortable="false" data-searchable="false"></th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
             <!-- Ready -->
             <div class="tab-pane fade" id="tabCurrentCourse">
-                <table id="gridTab2Student" class="table table-condensed table-hover table-striped">
+                <table id="gridTab3Student" class="table table-condensed table-hover table-striped">
                     <thead>
                         <tr>
                             <th data-column-id="clsid" data-width="10%" data-align="center">รหัสงานสอน</th>
@@ -73,7 +92,7 @@
             </div>
             <!-- Request to change tutor, Request to cancel class by student or parent, Request to cancel class by tutor -->
             <div class="tab-pane fade" id="tabStudentOther">
-                <table id="gridTab3Student" class="table table-condensed table-hover table-striped">
+                <table id="gridTab4Student" class="table table-condensed table-hover table-striped">
                     <thead>
                         <tr>
                             <th data-column-id="tutorname" data-width="20%">ชื่อ สกุลติวเตอร์</th>
@@ -93,6 +112,7 @@
         var _workStudentTabOne;
         var _workStudentTabTwo;
         var _workStudentTabThree;
+        var _workStudentTabFour;
         jQuery(document).ready(function () {
             console.log("ready!");
             if (_gUser.stuId != null) {
@@ -100,6 +120,7 @@
                 initialStudentTab1();
                 initialStudentTab2();
                 initialStudentTab3();
+                initialStudentTab4();
             }
 
         });
@@ -155,6 +176,23 @@
             });
         });
 
+        var gridTab4Student = $("#gridTab4Student").bootgrid({
+            navigation: 0,
+            rowSelect: true,
+            labels: {
+                noResults: 'ไม่พบรายการ'
+            }
+        }).on("loaded.rs.jquery.bootgrid", function () {
+            gridTab4Student.find("tr").on("click", function (e) {
+                console.log("click");
+            });
+            gridTab4Student.find(".command-detail").on("click", function (e) {
+                console.log("detail");
+                var i = parseInt($(this).data("row-id"));
+                loadClassDetailStudent4(_workStudentTabFour[i]);
+            });
+        });
+
 
         function appendstudenttab1(work, i) {
             gridTab1Student.bootgrid("append", [
@@ -171,6 +209,7 @@
         function appendstudenttab2(work, i) {
             gridTab2Student.bootgrid("append", [
                 {
+                    "clsid": work.clsId,
                     "tutorname": work.tutorName,
                     "subject": work.subjectAndGroupDetailName,
                     "time": work.recTimeLoc,
@@ -178,8 +217,20 @@
                 }
             ]);
         }
+
         function appendstudenttab3(work, i) {
             gridTab3Student.bootgrid("append", [
+                {
+                    "clsid": work.clsId,
+                    "tutorname": work.tutorName,
+                    "subject": work.subjectAndGroupDetailName,
+                    "time": work.recTimeLoc,
+                    "detail": "<button type='button' class='btn btn-primary btn-lg command-detail' data-row-id='" + i + "'>ดูรายละเอียด</button>"
+                }
+            ]);
+        }
+        function appendstudenttab4(work, i) {
+            gridTab4Student.bootgrid("append", [
                 {
                     "tutorname": work.tutorName,
                     "subject": work.subjectAndGroupDetailName,
@@ -217,11 +268,12 @@
             });
         }
 
+
         function initialStudentTab2() {
             $.ajax({
                 type: "GET",
 
-                url: _gServiceURL + "class/student/readylist/" + _gUser.stuId,
+                url: _gServiceURL + "class/student/pendingconfirm/" + _gUser.stuId,
                 contentType: "application/json; charset=utf-8",
                 crossDomain: true,
                 dataType: "json",
@@ -245,10 +297,12 @@
             });
         }
 
+
         function initialStudentTab3() {
             $.ajax({
                 type: "GET",
-                url: _gServiceURL + "class/student/otherslist/" + _gUser.stuId,
+
+                url: _gServiceURL + "class/student/readylist/" + _gUser.stuId,
                 contentType: "application/json; charset=utf-8",
                 crossDomain: true,
                 dataType: "json",
@@ -272,6 +326,33 @@
             });
         }
 
+        function initialStudentTab4() {
+            $.ajax({
+                type: "GET",
+                url: _gServiceURL + "class/student/otherslist/" + _gUser.stuId,
+                contentType: "application/json; charset=utf-8",
+                crossDomain: true,
+                dataType: "json",
+                success: function (data, status, jqXHR) {
+                    _workStudentTabThree = data.data.recommendTutorViews;
+                    console.log(_workStudentTabFour);
+                    if (data.data.size != 0) {
+                        $('#stubadgenum4').text(data.data.size);
+                        for (var i = 0; i < _workStudentTabFour.length; i++) {
+                            appendstudenttab4(_workStudentTabFour[i], i);
+                        }
+                    } else {
+                        $('#stubadgenum4').hide();
+                    }
+
+                },
+                error: function (jqXHR, status) {
+                    $('#stubadgenum4').hide();
+                }
+
+            });
+        }
+
 
         function loadClassDetailStudent1(result) {
             _gSelectedClsId = result.clsId;
@@ -288,6 +369,12 @@
             _gSelectedClsId = result.clsId;
             console.log(_gSelectedClsId);
             jQuery("#divMainContainer").load('./html/classdetailstudent.html');
+        }
+
+        function loadClassDetailStudent4(result) {
+            _gSelectedClsId = result.clsId;
+            console.log(_gSelectedClsId);
+            jQuery("#divMainContainer").load('./html/..html');
         }
 
     </script>
