--- a/html/recclassdetail.html
+++ b/html/recclassdetail.html
@@ -42,6 +42,10 @@
                             <label class="col-lg-9 labelnormal" id="lblProgram">ปกติ</label>
                         </div>
                         <div class="form-group">
+                            <label class="col-lg-3">ประเภทงานสอน :</label>
+                            <label class="col-lg-9 labelnormal" id="lblSpec">ไม่ระบุติวเตอร์</label>
+                        </div>
+                        <div class="form-group">
                             <label class="col-lg-3">ค่าแนะนำงานสอน :</label>
                             <label class="col-lg-9 labelnormal" id="lblPrice">2000.00</label>
                         </div>
@@ -165,6 +169,8 @@
             success: function (data, status, jqXHR) {
                 var classDetail = data.data.classDetailView;
                 _gSelectedClsId = classDetail.clsId;
+                console.log("initialData");
+                console.log(classDetail);
                 $('#breadcrumbrecclass').text('รายการแนะนำงานสอนเลขที่ ' + classDetail.recId);
                 $('#headerrecclass').text('รายการแนะนำงานสอนเลขที่ ' + classDetail.recId);
                 $('#lblClsId').text(classDetail.clsId);
@@ -175,6 +181,13 @@
                 $('#lblLevel').text(classDetail.stuLevel);
                 $('#lblSchool').text(classDetail.stuSchool);
                 $('#lblNumOfStudent').text(classDetail.numOfStu);
+                var spec = "";
+                if (classDetail.isSpec == 'Y') {
+                    spec = "ระบุติวเตอร์";
+                } else {
+                    spec = "ไม่ระบุติวเตอร์";
+                }
+                $('#lblSpec').text(spec);
                 _recclasstimes = classDetail.recommendTimelocationList;
                 for (var i = 0; i < _recclasstimes.length; i++) {
                     appendTime(_recclasstimes[i], i);
