--- a/html/studenteditclass.html
+++ b/html/studenteditclass.html
@@ -630,7 +630,7 @@
 
 
     $(document).ready(function () {
-        //    appendApplySubjectList(null, 0);
+        $('#sort-table td:nth-child(1),th:nth-child(1)').hide();
         initialUniList();
         initialFacList();
         initialSubjectDetailList();
