--- a/html/studenteditclass.html
+++ b/html/studenteditclass.html
@@ -346,7 +346,7 @@
                                             </tr>
                                             <tr>
                                                 <td>2</td>
-                                                <td>คณะของติวเตอร์</td>
+                                                <td>คณะและสถาบันของติวเตอร์</td>
                                             </tr>
                                             <tr>
                                                 <td>3</td>
