--- a/html/parenteditclass.html
+++ b/html/parenteditclass.html
@@ -76,14 +76,14 @@
                                     <div class="form-group col-lg-12 required" id="divStudentFirstName">
                                         <label for="txtFirstName" class="col-lg-3 labelform">ชื่อ</label>
                                         <div class="col-lg-4">
-                                            <input type="text" class="form-control" id="txtFirstName">
+                                            <input type="text" class="form-control" id="txtStudentFirstName">
                                         </div>
                                         <div class="col-lg-5"></div>
                                     </div>
                                     <div class="form-group col-lg-12 required" id="divStudentLastName">
                                         <label for="txtLastName" class="col-lg-3 labelform">นามสกุล</label>
                                         <div class="col-lg-4">
-                                            <input type="text" class="form-control" id="txtLastName">
+                                            <input type="text" class="form-control" id="txtStudentLastName">
                                         </div>
                                         <div class="col-lg-5"></div>
                                     </div>
@@ -1598,6 +1598,7 @@
     //    var tutorSpecOrder = [row1, row2, row3, row4, row5];
         if (_gHasClass == 'Y') {
             var bodyRequest = {
+                parId: parseInt(_gUser.parId),
                 stuId: stuId,
                 stuFirstName:stuFirstName,
                 stuLastName:stuLastName,
@@ -1619,6 +1620,7 @@
             }
         } else {
             var bodyRequest = {
+                parId: parseInt(_gUser.parId),
                 stuId: stuId,
                 stuFirstName:stuFirstName,
                 stuLastName:stuLastName,
@@ -1645,7 +1647,7 @@
 
     function callRequestnewclassNon(bodyRequest) {
         console.log(bodyRequest);
-        /*
+        
         $.ajax({
             type: "POST",
             url: _gServiceURL + "class/requestnewclass/nonspecific",
@@ -1665,7 +1667,7 @@
                 $('html, body').animate({ scrollTop: $('.breadcrumb').offset().top }, 'fast');
             }
 
-        });*/
+        });
     }
 
     /*-- Specific TUtor --*/
